name:                tcod-ant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ncrashed/tcod-ant#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tcod-ant
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base            >= 4.7 && < 5
    , reflex-host
    , reflex
    , tcod-haskell
