name:                tcod-ant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ncrashed/tcod-ant#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
    Game
    Game.Config
    Game.Map
    Game.Monad
  build-depends:
      base                      >= 4.7      && < 5
    , aeson                     >= 1.1      && < 1.3
    , array                     >= 0.5      && < 0.6
    , MonadRandom               >= 0.5      && < 0.6
    , mtl                       >= 2.2      && < 2.3
    , reflex
    , reflex-host
    , stm                       >= 2.4      && < 2.5
    , tcod-haskell              >= 0.2      && < 0.3
    , text                      >= 1.2      && < 1.3
    , time                      >= 1.6      && < 1.7
    , unbounded-delays          >= 0.1      && < 0.2
    , yaml                      >= 0.8      && < 0.9
  default-extensions:
    BangPatterns
    ConstraintKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies

executable tcod-ant
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options: -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base            >= 4.7 && < 5
    , tcod-ant
